k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
  namespace: ${KUBERNETES_NAMESPACE}
spec:
  selector:
    app: ${APP_NAME}
    service: ${APP_NAME}-service
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
